--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vuetify": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -50,27 +46,6 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "webpack-bundle-analyzer": "^2.9.0",
-    "cross-env": "^5.0.5",
-    "karma": "^1.7.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-phantomjs-shim": "^1.5.0",
-    "karma-sinon-chai": "^1.3.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.5",
-    "mocha": "^4.0.1",
-    "chai": "^4.1.2",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0",
-    "inject-loader": "^3.0.1",
-    "babel-plugin-istanbul": "^4.1.5",
-    "phantomjs-prebuilt": "^2.1.15",
-    "chromedriver": "^2.33.1",
-    "cross-spawn": "^5.1.0",
-    "nightwatch": "^0.9.16",
-    "selenium-server": "^3.6.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "opn": "^5.1.0",
@@ -81,7 +56,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.7.1",
+    "webpack": "^4.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0",
