--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "codebattle-site.vue",
-  "short_name": "Code Battle",
+  "short_name": "codebattle-site.vue",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
