--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "axios": "^0.18.0",
     "idb-keyval": "^3.0.5",
     "vue": "^2.5.2",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.0",
-    "vuex": "^3.0.1",
     "vue-video-background": "^0.1.2",
-    "vuejs-countdown": "^0.2.1"
+    "vuejs-countdown": "^0.2.1",
+    "vuetify": "^1.0.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "material-design-icons-iconfont": "^3.0.3",
