--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "idb-keyval": "^3.0.5",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-video-background": "^0.1.2",
