--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
+    "vue-scrollactive": "^0.6.1",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
