--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,8 @@
-# RewriteEngine On
-# RewriteBase /
-# RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteRule ^api(.*)$ info.php$1 [L,QSA]
-
-<Files "api">
-    ForceType application/x-httpd-php
-</Files>
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteBase /
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /index.html [L]
+</IfModule>
