--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "idb-keyval": "^3.0.5",
+    "npm": "^6.4.1",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
     "vue-parallaxy": "^1.1.1",
