--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "files.exclude": {
     "node_modules": true
   },
-  "terminal.integrated.shell.windows": "C:\\WINDOWS\\sysnative\\bash.exe"
+  "terminal.integrated.shell.windows": "C:\\WINDOWS\\sysnative\\bash.exe",
+  "editor.fontSize": 12
 }
