--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "idb-keyval": "^3.0.5",
     "npm": "^6.4.1",
+    "scroll-to-element": "^2.0.2",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
     "vue-parallaxy": "^1.1.1",
