--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "idb-keyval": "^3.0.5",
+    "less": "^3.9.0",
     "npm": "^6.4.1",
     "sass-loader": "^7.1.0",
     "scroll-to-element": "^2.0.2",
